# ZK-Campus-Passport

./: .gitignore  LICENSE  README.md
contracts/: Cargo.toml  README.md
contracts/rust_cw_package/: README.md  build.sh  package-lock.json  package.json
contracts/rust_cw_package/contract/: Cargo.toml
contracts/rust_cw_package/contract/src/: lib.rs
contracts/rust_cw_package/scripts/: deploy_and_instantiate.js  query.js
contracts/src/: badges.rs  identity.rs  lib.rs  reputation.rs  zk_verifier.rs
docs/: README.md
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: EventCard.js  Footer.js  Hero.js  Layout.js  Navbar.js  ProfileCard.js
frontend/lib/: db.js
frontend/models/: User.js  WalletUser.js
frontend/pages/: README.md  _app.js  about.js  contact.js  docs.js  events.js  index.js  login.js  my-events.js  organizer-backend.js  organizer.js  profile.js  register.js
polyfills/: asyncStorage.js
scripts/: prepare_repo.sh
zk/: README.md  generate_proof.py
zk/circuits/: gpa_proof.circom
zk/contracts/: GPAProof.sol  Verifier.sol
zk/scripts/: compile_circuit.sh  deploy_gpa_contract.js  generate_demo_proof.sh  setup_zk.sh  verify_zk_env.sh
zksol/: .env.example  README.md  deployment.json  gpa_proof.r1cs  gpa_proof.sym  gpa_proof.wasm  hardhat.config.js  package-lock.json  package.json  proof.json  public.json
zksol/circuits/: gpa_proof.circom
zksol/contracts/: GPAVerifier.sol  ZKCampusPassport.sol
zksol/scripts/: demo.js  deploy.js  generate_proof.js  verify_system.js
zksol/setup/: gpa_proof_0001.zkey  (+1 more)
(+5 files in other folders)
