[package]
name = "zk_campus_passport_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
# Psy SDK 核心依赖（根据官方最新版本调整）
psy-sdk = "0.5.0"
psy-std = "0.5.0"
# 零知识证明验证相关
ark-bls12-381 = "0.4.0"
ark-snark = "0.4.0"
# 工具类依赖
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.4.0"  # 仅用于开发环境，生产环境替换为链上存储
